# flightdeck

./: .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  LICENSE  README.md  dist-workspace.toml  manifest
.agents/skills/flightdeck-architecture-seams/: SKILL.md
.agents/skills/flightdeck-config-conventions/: SKILL.md
.agents/skills/flightdeck-cross-platform-parity/: SKILL.md
.agents/skills/orchestrate-agents/: SKILL.md
.agents/skills/shipping-flightdeck-changes/: SKILL.md
.beads/: .gitignore  config.yaml  interactions.jsonl  issues.jsonl  metadata.json
.claude/: settings.json
.claude/hooks/: rust-fast-checks.sh
.flightdeck/: config.toml
.github/workflows/: build-setup.yml  ci.yml  relay-deploy.yml  relay.yml  release.yml  web-deploy.yml
.superpowers/brainstorm/: .last-token
containers/: Containerfile.claude  Containerfile.codex  Containerfile.opencode  README.md
examples/: keylog.rs
ios/: .gitignore  README.md  project.yml
ios/FlightDeckRemote/: FlightDeckRemote.entitlements
ios/FlightDeckRemote/App/: AppDelegate.swift  AppRouter.swift  BadgeController.swift  FlightDeckRemoteApp.swift  PushCoordinator.swift  RootView.swift
ios/FlightDeckRemote/DesignSystem/: AgentStatus.swift  CardStyle.swift  GitIndicatorText.swift  NotificationCell.swift  StatusDot.swift  StatusPill.swift  Theme.swift  Typography.swift  WorkingSpinner.swift
ios/FlightDeckRemote/Navigation/: ActivityStore.swift  AppTab.swift  CustomTabBar.swift  DeepLink.swift  FeedUnreadStore.swift  MainTabView.swift  ProjectsNavModel.swift  ScenePhaseTransportGate.swift
ios/FlightDeckRemote/Security/: AppLockController.swift  AppLockView.swift  DeviceIdentity.swift  E2EChannel.swift  KeyAgreementKeys.swift  KeychainStore.swift  RelayPasswordStore.swift
ios/FlightDeckRemote/Transport/: NetworkPathMonitor.swift  PairingRecord.swift  (+9 more)
ios/FlightDeckRemoteTests/: BadgeControllerTests.swift  DesignSystemTokenTests.swift  ThemeTests.swift  TypographyTests.swift
ios/FlightDeckRemoteUITests/: ActivityUITests.swift  AppLockUITests.swift  ChatComposeUITests.swift  ChatTranscriptUITests.swift  ComponentGalleryUITests.swift  ConnectionUITests.swift  ControlUITests.swift  DocScreenshotUITests.swift  FeedUnreadUITests.swift  FlightDeckRemoteUITests.swift  FocusModeUITests.swift  GitUITests.swift  NavigationUITests.swift  PairingUITests.swift  ProjectsSessionsUITests.swift  RemoteLiveE2EUITests.swift  SettingsUITests.swift  ShellUITests.swift
ios/scripts/: generate-icon.swift  sync-fixtures.sh  test.sh
remote/: Cargo.toml
remote/protocol/: Cargo.toml
remote/protocol/src/: common.rs  e2e.rs  ids.rs  lib.rs  relay.rs
remote/protocol/tests/: round_trip.rs
remote/protocol/tests/fixtures/desktop_to_phone/: command_ack.json  event.json  git_status.json  rollup.json  shell_event.json  shell_output.json  snapshot.json  status_update.json  transcript.json  transcript_append.json
remote/protocol/tests/fixtures/e2e_crypto/: vectors.json
remote/protocol/tests/fixtures/phone_to_desktop/: clear_manual_status.json  close_session.json  git_abandon_worktree.json  git_merge_back.json  git_pull_base.json  mark_read.json  new_agent.json  permission_decision.json  reply.json  request_snapshot.json  request_transcript.json  restart_agent.json  set_manual_status.json  shell_close.json  shell_input.json  shell_interrupt.json  shell_open.json
remote/protocol/tests/fixtures/relay/: ack.json  auth_challenge.json  auth_ok.json  auth_response.json  bye.json  envelope.json  error.json  hello.json  hello_ok.json  machine_name.json  pairing_claim.json  pairing_claimed.json  pairing_offer.json  pairing_offer_ok.json  pairing_revoked.json  peer_presence.json  ping.json  pong.json  push_token_ack.json  register_push_token.json  resume.json  revoke.json  unregister_push_token.json  version_incompatible.json
remote/relay/: Cargo.toml  Dockerfile  README.md
remote/relay/deploy/: README.md  bind-custom-domain.sh  containerapp.yaml
remote/relay/src/: apns.rs  auth.rs  claims.rs  config.rs  handlers.rs  ids.rs  lib.rs  main.rs  queue.rs  router.rs  session.rs  store.rs  telemetry.rs
remote/relay/src/store/: sqlite.rs
remote/relay/tests/: graceful_shutdown.rs  integration.rs  relay_flow.rs  relay_password.rs  store_persistence.rs
remote/relay/tests/support/: mod.rs
scripts/: build-windows  release
scripts/e2e/: README.md  e2e.entitlements  fake-agent.sh  make-fixture-project.sh  run-fullstack.sh
specs/: CODEREVIEW-TOPICS.md  CONTAINER_SUPPORT_PLAN.md  DESKTOP_REMOTE_INTEGRATION.md  MOBILE_REMOTE_BRIEFING.md  MOBILE_REMOTE_PRD.md  PLAN.md  REMOTE_PROTOCOL.md  SPECS.md
src/: lib.rs  main.rs  signals.rs  update.rs
src/agents/: adapter.rs  mod.rs  registry.rs  resume.rs  setup.rs  status.rs
src/app/: commands.rs  events.rs  mod.rs  modes.rs  state.rs
src/config/: init.rs  load.rs  mod.rs  schema.rs
src/contracts/: domain.rs  error.rs  mod.rs  real.rs  traits.rs
src/fs/: ignore.rs  mod.rs  paths.rs
src/git/: branch.rs  mod.rs  remote.rs  repo.rs  status.rs  worktree.rs
src/hooks/: mod.rs
src/notify/: mod.rs
src/persistence/: mod.rs  project_state.rs  recovery.rs  workspace.rs
src/remote/: bridge.rs  client.rs  commands.rs  crypto.rs  debuglog.rs  feed.rs  identity.rs  mod.rs  notifier.rs  opencode.rs  pairing.rs  shell.rs  state.rs  transcript.rs
src/runtime/: container.rs  guards.rs  image.rs  mod.rs  name.rs  podman.rs  spec.rs
src/terminal/: mod.rs  pty.rs  session.rs  shell.rs
src/testing/: mod.rs
src/tui/: clipboard.rs  config_manager.rs  input.rs  layout.rs  mod.rs  mode_style.rs  palette.rs  platform.rs  render.rs  selection.rs
tests/: guards.rs  integration.rs  remote_e2e.rs
tests/integration/: init.rs  merge_preconditions.rs  push.rs  recovery.rs  util.rs  worktree.rs
web/: .dockerignore  Dockerfile  docs.config.yaml  next.config.ts  package-lock.json  package.json
web/deploy/: README.md  bind-custom-domain.sh  setup.sh
web/docs/: concepts.mdx  getting-started.mdx  index.mdx  interface.mdx
web/docs-platform/: package.json
web/src/: site-definition.ts
(+242 files in other folders)
