[package]
name = "flightdeck"
version = "1.7.2"
edition = "2021"
description = "A cross-platform terminal UI for orchestrating multiple local AI coding agents in isolated Git worktrees."
repository = "https://github.com/neworange-ruud/flightdeck"
homepage = "https://github.com/neworange-ruud/flightdeck"
readme = "README.md"
license = "MIT"
keywords = ["ai", "agents", "git", "tui", "worktree"]
categories = ["command-line-utilities", "development-tools"]

[lib]
name = "flightdeck"
path = "src/lib.rs"

[[bin]]
name = "flightdeck"
path = "src/main.rs"

[features]
# On by default: self-update (`flightdeck update`) and the update notice.
# Its dependency graph pulls in `aws-lc-sys` (a C crypto library) which needs a C
# toolchain, so it is excluded two ways: by feature (`--no-default-features` for a
# pure-Rust graph, e.g. the self-contained windows-gnu target with no
# MSVC/CMake/NASM), and — even with the feature on — on Windows, where the
# updater deps are target-gated out (see the `[target.'cfg(not(windows))']`
# table) so the released windows-msvc binary stays pure-Rust. See src/update.rs.
default = ["self-update"]
self-update = ["dep:axoupdater", "dep:tokio"]

[dependencies]
crossterm = "0.29.0"
portable-pty = "0.9.0"
ratatui = "0.30.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
thiserror = "2.0.18"
toml = "1.1.2"
vt100 = "0.16.2"

# Self-update deps, built on every platform EXCEPT Windows. Target-gating them
# here (rather than only behind the `self-update` feature) keeps the Windows
# build pure-Rust even when that default feature is enabled: axoupdater's graph
# pulls in `aws-lc-sys` (a C crypto library) which would otherwise need a C
# toolchain on the windows-msvc release runner. On Windows the `update` module
# falls back to a no-op stand-in (see src/lib.rs).
[target.'cfg(not(windows))'.dependencies]
# Self-update for installer-based installs (`flightdeck update`). The `blocking`
# feature exposes the `*_sync` methods so we avoid pulling an async runtime into
# the otherwise-synchronous TUI; `github_releases` (a default feature) points the
# updater at our GitHub Releases. See src/update.rs.
axoupdater = { version = "0.10", features = ["blocking"], optional = true }
# Drives axoupdater's async `query_new_version` from the background update-check
# thread (the once-a-day notice). A current-thread runtime; tokio is
# already in the graph via axoupdater's `blocking` feature.
tokio = { version = "1", features = ["rt", "net", "time"], optional = true }

# POSIX-only: shutdown-signal handling (run teardown on SIGTERM/SIGINT) and the
# raw kill(2)/killpg used for graceful, process-group agent termination.
[target.'cfg(unix)'.dependencies]
signal-hook = "0.3"
libc = "0.2"

[dev-dependencies]
insta = "1.48.0"
tempfile = "3.27.0"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
