[package]
name = "flightdeck"
version = "1.7.1"
edition = "2021"
description = "A cross-platform terminal UI for orchestrating multiple local AI coding agents in isolated Git worktrees."
repository = "https://github.com/neworange-ruud/flightdeck"
homepage = "https://github.com/neworange-ruud/flightdeck"
readme = "README.md"
license = "MIT"
keywords = ["ai", "agents", "git", "tui", "worktree"]
categories = ["command-line-utilities", "development-tools"]

[lib]
name = "flightdeck"
path = "src/lib.rs"

[[bin]]
name = "flightdeck"
path = "src/main.rs"

[features]
# On by default: self-update (`flightdeck update`) and the update notice.
# Its dependency graph pulls in `aws-lc-sys` (a C crypto library) which needs a C
# toolchain, so it is excluded two ways: by feature (`--no-default-features` for a
# pure-Rust graph, e.g. the self-contained windows-gnu target with no
# MSVC/CMake/NASM), and — even with the feature on — on Windows, where the
# updater deps are target-gated out (see the `[target.'cfg(not(windows))']`
# table) so the released windows-msvc binary stays pure-Rust. See src/update.rs.
default = ["self-update"]
self-update = ["dep:axoupdater", "dep:tokio"]

[dependencies]
crossterm = "0.29.0"
portable-pty = "0.9.0"
ratatui = "0.30.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
thiserror = "2.0.18"
toml = "1.1.2"
vt100 = "0.16.2"

# --- FlightDeck Remote (relay client, src/remote/) -------------------------
# Shared phone<->desktop wire types. Path dep into the sibling `remote/`
# workspace; the desktop and the relay build the exact same frames from it and
# the iOS app mirrors them in Swift. JSON wire format via serde/serde_json above.
flightdeck-remote-protocol = { path = "remote/protocol" }
# Blocking WebSocket client for the long-lived relay connection. tungstenite
# (NOT tokio-tungstenite) is used deliberately: the desktop TUI has no async
# runtime, so the relay client is a plain std::thread owning a blocking socket,
# mirroring the update-check thread. `handshake` gives the client upgrade; TLS
# (wss) is added per-platform below. Base build carries no TLS so a plain-Rust
# Windows target keeps building (see the target table).
tungstenite = { version = "0.24", default-features = false, features = ["handshake"] }
# Per-device identity: ECDSA over NIST P-256 with SHA-256 (spec §5.1). P-256 is
# mandated by the protocol because the iPhone key is Secure-Enclave-resident and
# the Enclave only speaks P-256; the desktop must use the same curve to be
# verifiable by the relay. `ecdsa` enables sign/verify.
p256 = { version = "0.13", features = ["ecdsa"] }
# Device id = SHA-256 of the X9.63 public key (matches the iOS convention).
sha2 = "0.10"
# Wire encodings: standard-padded base64 for keys/signatures/nonces/ciphertext
# (spec §2/§5.1) and url-safe-no-pad for the device id.
base64 = "0.22"
# CSPRNG for P-256 key generation (OsRng) and backoff jitter. rand_core 0.6 is
# the version p256/ecdsa expect, so one dependency serves both.
rand_core = { version = "0.6", features = ["getrandom"] }

# Self-update deps, built on every platform EXCEPT Windows. Target-gating them
# here (rather than only behind the `self-update` feature) keeps the Windows
# build pure-Rust even when that default feature is enabled: axoupdater's graph
# pulls in `aws-lc-sys` (a C crypto library) which would otherwise need a C
# toolchain on the windows-msvc release runner. On Windows the `update` module
# falls back to a no-op stand-in (see src/lib.rs).
[target.'cfg(not(windows))'.dependencies]
# Self-update for installer-based installs (`flightdeck update`). The `blocking`
# feature exposes the `*_sync` methods so we avoid pulling an async runtime into
# the otherwise-synchronous TUI; `github_releases` (a default feature) points the
# updater at our GitHub Releases. See src/update.rs.
axoupdater = { version = "0.10", features = ["blocking"], optional = true }
# Drives axoupdater's async `query_new_version` from the background update-check
# thread (the once-a-day notice). A current-thread runtime; tokio is
# already in the graph via axoupdater's `blocking` feature.
tokio = { version = "1", features = ["rt", "net", "time"], optional = true }
# TLS (wss) for the relay client on every platform except Windows, mirroring how
# the self-update crypto deps are target-gated so the released windows-msvc
# binary stays pure-Rust (no aws-lc C toolchain). Feature-unified with the base
# `tungstenite` above: on non-Windows the socket gains rustls with the webpki
# root store; on Windows only plain `ws://` is available (localhost dev + tests).
tungstenite = { version = "0.24", default-features = false, features = ["rustls-tls-webpki-roots"] }

[dev-dependencies]
insta = "1.48.0"
tempfile = "3.27.0"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
