# FlightDeck Remote relay: zero-knowledge broker between phone and desktop.
# Deployed on Azure Container Apps; routes ciphertext by pairing ID only.
[package]
name = "flightdeck-relay"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
name = "flightdeck_relay"
path = "src/lib.rs"

[[bin]]
name = "flightdeck-relay"
path = "src/main.rs"

[dependencies]
# NOTE: not yet imported from — this scaffold task deliberately does not
# consume protocol types. Routing/auth (a later task) will change that.
flightdeck-remote-protocol = { path = "../protocol" }

axum = { version = "0.8", features = ["ws"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "signal", "time"] }
tower-http = { version = "0.7", features = ["trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.30"
futures-util = "0.3"
reqwest = { version = "0.13", default-features = false, features = ["json"] }
